--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
           <p class="p-footer-two">Social media</p>
           <ul class="list svg-images footer-list-elements">
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
@@ -228,14 +228,14 @@
               </a>
             </li>
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
